grails-app/assets/stylesheets/application/styles.less
/* ... */
.show-warning {
  left: 38px;
  position: absolute;
  top: 27px;
  z-index: 1;
}

.invert {
  color: @invert-color;
}

.split-modal {
  .left-panel {
    .make-sm-column(3);
    .left-panel-bottom, .left-panel-header {
      margin: 15px;
    }
    .left-panel-body {
      height: 400px;
      overflow: auto;
    }
    .left-panel-bottom {
      text-align: center;
    }
  }
  .right-panel {
    .make-sm-column(9);
  }
  .hide-left-panel {
    .left-panel {
      display: none;
    }
    .right-panel {
      .make-sm-column(12);
    }
  }
}

.wizard, .split-modal {
  .modal-body {
    padding-left: 15px;
    padding-top: 0;
    padding-bottom: 0;
  }
  .steps, .right-panel {
    padding-bottom: 15px;
    padding-top: 15px;
    .background-logo();
  }
  .step {
    padding-bottom: 50px;
    height: 100%;
  }
  .steps-indicator, .left-panel {
    background-color: @light-bg;
    padding: 0;
    list-style: none;
    .pagination {
      margin: 0;
    }
    ul.left-panel-body {
      > li {
        line-height: 40px;
        cursor: pointer;
        &.default {
          pointer-events: none;
        }
        > a {
          color: @gray-light;
          padding: 3px 15px;
          > i.fa-check, i.icon-right {
            float: right;
            margin-top: 12px;
            margin-right: -6px;
          }
          &:hover {
            color: @gray-darker;
            > i {
              color: @gray-darker;
            }
          }
        }
        &.current, &.editing, &.current:hover, &.editing:hover {
          > a, > a:hover {
            background-color: @brand-primary;
            color: @body-bg;
            > i {
              color: @body-bg;
            }
          }
        }
      }
    }
  }
  .left-panel, .right-panel {
    min-height: 460px;
  }
  .right-panel {
    overflow: hidden;
  }
}

.footer-btn-toolbar {
  position: absolute;
  bottom: 15px;
  right: 15px;
  left: 15px;
}

@media (max-width: @screen-xs-max) {
  .wizard {
    .steps-indicator > li {
      display: inline-block;
      > a {
        display: inline-block;
        padding: 3px 5px;
        i {
          float: none;
          margin-top: 0;
          margin-right: 0;
        }
      }
    }
  }
}

@media (min-width: @screen-sm-min) {
  .wizard {
    .steps {
    }
    .steps-indicator {
    }
    .modal-body div.wizard-row {
      background: @light-bg;
    }
  }
}

.atwho-view {
  border-radius: 0px;
  border-color: @brand-primary;
  box-shadow: rgba(0, 0, 0, 0.14902) 0px 4px 5px 0px;
  .cur {
    background: @brand-primary;
  }
  strong {
    color: #000;
  }
  ul {
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .3);
    padding: 4px;
    li {
      border: none;
    }
  }
}

.table.attachments {
  margin-bottom: 0;
  .filename {
    .text-overflow();
  }
}

.drop-zone {
  display: none;
}

.drop-enabled {
  .drop-zone {
    background-color: #fff;
    color: @gray-darker;
    position: absolute;
    display: block;
    opacity: 0.9;
    z-index: 100;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    h2 {
      text-align: center;
      .vertical-align();
      position: absolute;
      right: 0;
      left: 0;
      margin: 0;
    }
  }
}

.pdf-viewer {
  overflow: auto;
  max-height: 600px;
}

#user-avatar {
  .choose-file {
    display: inline;
    .btn {
      padding: 7px;
      font-size: 18px;
      cursor: pointer;
    }
    cursor: pointer;
  }
  img {
    padding: 3px;
    height: 40px;
    width: 40px;
    display: inline-block;
  }
  img.selected {
    padding: 0;
    border: 3px solid @brand-primary;
  }
}

ul.dropdown-menu[uib-datepicker-popup-wrap] {
  padding: 6px;
}

.input-group {
  .input-group-addon {
    & > i.fa-close {
      cursor: pointer;
    }
    &.no-style {
      background: none;
      border: none !important;
    }
  }
}

.list-users {
  .well;
  padding: 2px;
  margin-top: -6px;
  .user {
    border: 1px solid @legend-border-color;
    background: #fff;
    padding: 2px 4px;
    margin: 2px;
    display: inline-block;
    .name {
      padding-left: 5px;
      padding-right: 5px;
      display: inline-block;
      vertical-align: middle;
    }
    .btn {
      cursor: pointer;
    }
  }
}

.user-role {
  &.sm:not(.po) {
    background: #fff;
    border: 2px solid @logo-color-bottom;
  }
  &.po {
    background: #fff;
    border: 2px solid @logo-color-top;
    &.sm {
      border-right-color: @logo-color-bottom;
      border-bottom-color: @logo-color-bottom;
    }
  }
  &.img-rounded {
    border-radius: 6px;
  }
}

.import {
  .changes {
    //TODO add make-row and remove row class in html
    &:extend(.clearfix all);
    .erase {
      .form-group;
      .checkbox;
      .make-xs-column(6);
    }
    .changes-col-1 {
      .form-group;
      .make-xs-column(5);
    }
    .changes-col-2 {
      .form-group;
      .make-xs-column(6);
    }
    .changes-arrow {
      text-align: center;
      padding-top: 28px;
      .make-xs-column(1);
    }
  }
}

.dropdown-toggle:not(.navbar-notif) {
  cursor: pointer;
  .badge {
    background: none !important;
    display: inline-block;
    text-align: right;
    font-weight: bold;
    left: -2px;
    top: 5px;
    color: #000 !important;
    padding: 0;
    margin: 0;
  }
}
/* ... */

